<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_enter_course_pickup"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="100"
        android:title="@string/enter_course_pickup"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload_course_group"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:title="@string/upload_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refetch_group"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:title="@string/refetch_group"
        app:showAsAction="ifRoom" />
</menu>