<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutItemLists"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp"
    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSchoolNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_notice" />

        <LinearLayout
            android:id="@+id/NoticeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSchoolNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_news" />

        <LinearLayout
            android:id="@+id/NewsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_overtness" />

        <LinearLayout
            android:id="@+id/PartyContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSchoolOvertness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_overtness" />

        <LinearLayout
            android:id="@+id/SchoolOvertContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInnerControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inner_control_overtness" />

        <LinearLayout
            android:id="@+id/InnerControlContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewOvertness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_overtness" />

        <LinearLayout
            android:id="@+id/OvertnessContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/academic_lecture" />

        <LinearLayout
            android:id="@+id/LectureContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>
</LinearLayout>
