<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="3">

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/imageViewTrainMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_compasses"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/train_mode"
                android:textAlignment="center"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/imageViewSchoolBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_school_bus"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/school_bus"
                android:textAlignment="center"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/borderTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_food"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/developing"
                android:textAlignment="center"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/imageViewIClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_school"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/iclass"
                android:textAlignment="center"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/borderTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text=""
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <xyz.cyanclay.poststudent.ui.components.BorderTextView
                android:id="@+id/borderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text=""
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>